# custom-ai-agents

./: .env.example  .gitignore  CHANGELOG.md  Makefile  POST.en.md  POST.it.md  README.md  pyproject.toml
app/: prompts.py  proxy.py  router.py  trace.py
app/ag/: base.py  chroma_db.py
app/agents/: __init__.py  reviewer.py
app/agents/coder/: __init__.py  code_validator.py
app/engine/: base.py  deterministic.py  multi_agent.py  tool_agent.py
app/tools/: web_browsing.py
benchmark/: README.md  conversation.md  deterministic.md  grounding.md  multi_agent.md  orchestrator.md  reviewer.md
benchmark/runs/: conversation-history1.md  conversation-history2.md  deterministic-coding-llama.md  deterministic-coding.md  deterministic-llama3.2_3b.md  deterministic-qwen2.5.md  grounding-nomic-w500.md  multi_agent-llama3.2_3b.md  multi_agent-qwen2.5.md  orchestrator-llama3.2_3b.md  orchestrator-qwen2.5.md  reviewer-llama3.2_3b.md  reviewer-qwen2.5.md
data/documents/: README.md
images/: engine-agent-as-tool.mermaid  engine-deterministic.mermaid  engine-multi-agent.mermaid  engine-tool-agent.mermaid  flowchart.mermaid
ollama/: Modelfile
prompts/: agent_as_tool.md  aws_expert.md  coder.md  deterministic_rag.md  python_expert.md  reviewer.md  tool_agent.md  triage.md
scripts/benchmark/: conversation.py  deterministic.py  grounding.py  helpers.py  multi_agent.py  orchestrator.py  reviewer.py
scripts/document_manager/: check_chunks.py  storage.py
tests/: test_chroma_db.py  test_code_validator.py  test_coder.py  test_engine.py  test_integration.py  test_prompts.py  test_proxy.py  test_reviewer.py  test_router.py  test_tool_agent.py  test_tools.py  test_trace.py
tests/scripts/benchmark/: conftest.py  test_conversation.py  test_deterministic.py  test_grounding.py  test_multi_agent.py  test_orchestrator.py  test_reviewer.py
