[project]
name = "custom-ai-agents"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "any_agent",
    "bs4",
    "chromadb",
    "duckduckgo_search",
    "faiss-cpu",
    "fastapi",
    "markdownify",
    "ollama",
    "openai",
    "pdfplumber",
    "pydantic",
    "requests",
    "smolagents",
    "uvicorn",
]

[dependency-groups]
dev = [
    "bump-my-version",
    "git-cliff",
    "httpx",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

# This project is an app, not a distributable package.
[tool.uv]
package = false

# ---------------------------------------------------------------------------
# bumpversion
# ---------------------------------------------------------------------------
[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true
tag_name = "v{new_version}"
message = "build: release {new_version}"
tag_message = "custom-ai-agents {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# ---------------------------------------------------------------------------
# git-cliff
# ---------------------------------------------------------------------------
[tool.git-cliff.remote.github]
owner = "bilardi"
repo = "custom-ai-agents"

[tool.git-cliff.changelog]
header = "# Changelog\n\nAll notable changes to this project will be documented in this file.\n\nThe format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n\n"
body = """
{% if version %}\
## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
## [Unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}\
### {{ group }}
{% for commit in commits %}\
- {{ commit.message | upper_first }}
{% endfor %}
{% endfor %}\
"""
footer = """
{% for release in releases %}\
{% if release.version %}\
{% if release.previous is defined and release.previous.version is defined %}\
[{{ release.version | trim_start_matches(pat="v") }}]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}/compare/{{ release.previous.version }}...{{ release.version }}
{% else %}\
[{{ release.version | trim_start_matches(pat="v") }}]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}/releases/tag/{{ release.version }}
{% endif %}\
{% else %}\
{% if release.previous is defined and release.previous.version is defined %}\
[Unreleased]: https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}/compare/{{ release.previous.version }}...HEAD
{% endif %}\
{% endif %}\
{% endfor %}
"""
trim = true
render_always = false
skip_if_empty = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
tag_pattern = "v[0-9].*"
sort_commits = "oldest"
split_commits = false

[[tool.git-cliff.git.commit_parsers]]
message = "^feat"
group = "Features"

[[tool.git-cliff.git.commit_parsers]]
message = "^fix"
group = "Bug Fixes"

[[tool.git-cliff.git.commit_parsers]]
message = "^refactor|^perf"
group = "Performance"

[[tool.git-cliff.git.commit_parsers]]
message = "^docs"
group = "Documentation"

[[tool.git-cliff.git.commit_parsers]]
message = "^test"
group = "Test"

[[tool.git-cliff.git.commit_parsers]]
message = "^chore"
group = "Chores"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: needs a running Ollama (opt-in, deselected by default)"]
addopts = ["-m", "not integration"]
# third-party deprecation from starlette TestClient, not from this project
filterwarnings = ["ignore:Using .httpx. with .starlette.testclient."]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
exclude = [".venv"]
fix = true
line-length = 100
output-format = "grouped"
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # missing trailing comma # conflict with formatter
  "D203", # incorrect-blank-line-before-class
  "D213", # multi-line-summary-second-line
  "D413", # Missing blank line after last section ("Args", "Returns")
  "D415", # First line should end with a period, question mark, or exclamation point
  "EXE002", # The file is executable but no shebang is present
  "FBT", # positional argument in function definition or call
  "ISC001", # implicit string concatenation # conflict with formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"] # Missing docstring in public package
"tests/**" = [
  "ANN", # Missing return / type annotation for public function
  "ARG", # Unused arguments in test doubles matching a signature
  "D", # Missing docstrings (tests and test doubles)
  "PLR2004", # Magic values in assertions
  "RUF059", # Unused unpacked variable (test helpers returning tuples)
  "S101", # Use of `assert` detected
  "SLF001", # Private member accessed (tests may check internals)
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

# ---------------------------------------------------------------------------
# pyright
# ---------------------------------------------------------------------------
[tool.pyright]
exclude = ["**/__pycache__"]
# tests are mock-heavy; type-checked loosely, covered by ruff and by running them
include = ["app", "scripts"]
pythonVersion = "3.13"
reportMissingTypeStubs = false
# FastAPI routes are defined inside a factory and only referenced via decorators.
reportUnusedFunction = false
typeCheckingMode = "strict"
